--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "nyc --reporter=html --reporter=text mocha"
   },
   "author": "Eric Wang",
   "dependencies": {
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "mocha": "^5.1.1",
+    "nyc": "^11.7.3",
     "sinon": "^5.0.7"
   }
 }
