--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ws": "^5.1.1"
   },
   "devDependencies": {
+    "jshint": "^2.9.5",
     "mocha": "^5.1.1",
     "nyc": "^11.7.3",
     "sinon": "^5.0.7"
