--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "card-game",
   "version": "1.0.0",
-  "description": "",
+  "description": "A multiplayer websocket based card game. Includes matchmaking, a tutorial against an AI, and a card viewer.",
   "main": "index.js",
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha"
