--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: node_js
 node_js:
     - 'node'
+before_script:
+    - npm install
+    - npm install jshint
+script:
+    - npm test
+    - jshint *.js
